sales order optimizations dispatch plan optimizations tableview lines for better viewing tableview formatting for numbers and strings